comment-charts/templates/myloadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mygolang
spec:
  selector:
    app: mygolang
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
