comment-charts/templates/myingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mygolang
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mygolang
            port:
              number: 80
